compiler/test/conformance/valid/expr_list_literal.tu
// expr: list literal [ ... ] (inclui vazio)
fn main() {
  let xs = [1, 2, 3, 4]
  print(xs)
  let empty: List<Int> = []
  print(empty)
}
