compiler/test/conformance/invalid/inv_malformed_type.tu
// INVÁLIDO: tipo genérico malformado (sem argumento de tipo)
fn main() {
  let x: List< = [1]
  print(x)
}
